SERVER-58781 ReshardingCoordinatorObserver should not fulfill promises when stepping up in state kInitializing